Change css from visibility to display :bug:#270

--- a/src/Client/style.scss
+++ b/src/Client/style.scss
@@ -371,7 +371,8 @@ tr.suggestion :hover {
 }
 
 tr.suggestion-details {
-    visibility: collapse;
+    /*visibility: collapse;*/
+    display: none;
     box-shadow: 1px 2px 2px darkgrey
 }
 
